<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.dualword.android.notedemo.MainActivity">

    <item android:id="@+id/menu_save"
        android:orderInCategory="10"
          android:icon="@drawable/ic_menu_save"
          android:alphabeticShortcut='s'
          android:title="@string/menu_save"
          android:showAsAction="always" />

    <item android:id="@+id/menu_delete"
        android:orderInCategory="20"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_cancel"
        android:orderInCategory="30"
          android:icon="@drawable/ic_menu_revert"
          android:title="Cancel"
        android:showAsAction="always" />



</menu>