<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/GlobalFont"
        android:id="@+id/note_id"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:editable="false"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:singleLine="false"
        android:layout_weight="1"
        android:editable="true"
        android:gravity="start"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true"
        android:hint="New note..."
        />

</LinearLayout>
